# university

./: README.md
bachelors-work/: README.md  setup-controller.sh
bachelors-work/ansible/: zsh-setup.yml
bachelors-work/configs/: cluster-nginx.conf  prometheus.yml
bachelors-work/shell/: ceph-cluster-each-vm.sh  ceph-node0.sh  master-setup.sh  minio-cluster-each-vm-xfs.sh  prepare_disk.sh  setup_grafana_prometheus.sh
bachelors-work/tests/: go.mod  go.sum  s3bench.go
coursework-networking/: README.md  SKAITYK.md
iskauda/: .gitignore  README.md
iskauda/ansible/: client.yaml  (+2 more)
kasbus/: README.md  settings.gradle
pullout/: .gitignore  .gitlab-ci.yml  README.md
pullout/src/client/: README.md  pyproject.toml
pullout/src/client/pullout/: __init__.py  __main__.py  backend.py  carddav.py  filter_image.py  image_processing.py  ner_processor.py  ocr_processor.py  pdf_gen.py  printer.py  vobj.py
pullout/src/client/pullout/ner/lt_model/: config.cfg  meta.json
pullout/src/client/pullout/ner/lt_model/ner/: model  moves
pullout/src/client/pullout/ner/lt_model/vocab/: strings.json
pullout/src/client/pullout/ner/training/: README.md  config_lt.cfg  corpus.py  prepare_data.py  training.py
pullout/src/client/pullout/tests/: test_backend.py  test_email_regex.py  test_ner.py  test_phone_regex.py  test_tesseract.py  test_vcard_converter.py  utils.py
pullout/src/client/pullout/tests/assets/db/: accounts.db  groups.db  vcards.db
pullout/src/client/pullout/tests/assets/vcards/: ex1.vcf  ex2.vcf  ex3.vcf  ex4.vcf  ex5.vcf
straysafe/: .gitlab-ci.yml  README.md
(+279 files in other folders)
