[tool.poetry]
name = "pullout"
version = "0.1.0"
description = "CardDAV client that users will use as CLI to communicate with other servers"
authors = [
    "Narbutas Renaldas <renaldas.narbutas@mif.stud.vu.lt>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.7"
numpy = "^1.26.2"
requests = "^2.31.0"
vobject = "^0.9.6.1"
reportlab = "^4.0.8"
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"
imutils = "^0.5.4"
spacy = "^3.7.2"
spacy-fastlang = "^2.1.0"
spacy-langdetect = "^0.1.2"
scipy = "^1.11.4"

[tool.poetry.scripts]
pullout = "pullout.__main__:main"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
lt-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/lt_core_news_sm-3.7.0/lt_core_news_sm-3.7.0-py3-none-any.whl"}
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
spacy-transformers = "^1.3.2"

[tool.poe.tasks]
test = "coverage run -m unittest discover -s pullout/tests"
test-cov = "coverage report -m"
twoimg = { shell = "poetry run pullout assets/photos/1Def.JPG assets/photos/2Def.JPG" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
